--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<h1>coming soon</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>coming soon</title>
+	<style type="text/css">
+	body {
+		font-family: "Chalkboard SE", "Comic Sans MS", sans-serif;
+	}
+	iframe {
+		width: 100%;
+		height: 90%;
+		border: 0;
+	}
+	</style>
+</head>
+<body>
+	<h1>coming soon, in meantime enjoy this collection of under construction gif's lol</h1>
+	<iframe src="http://www.textfiles.com/underconstruction/"></iframe>
+</body>
+</html>
