index: EVEN MOAR CONSTRUCTION

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 	}
 	iframe {
 		width: 100%;
-		height: 90%;
+		height: 600px;
 		border: 0;
 	}
 	</style>
 </head>
 <body>
-	<h1>coming soon, in meantime enjoy this collection of under construction gif's lol</h1>
+	<h1 align="center">coming soon, in meantime enjoy this collection of under construction gif's lol</h1>
 	<iframe src="http://www.textfiles.com/underconstruction/"></iframe>
 </body>
 </html>
